# ray-tracing-weekend

./: .gitignore  Cargo.toml  Makefile  README.md  color.h  main.c  ray.c  ray.h  vec3.c  vec3.h
src/: aabb.rs  aarect.rs  bvh.rs  camera.rs  cube.rs  hittable.rs  lib.rs  main.rs  material.rs  moving_sphere.rs  perlin.rs  ray.rs  sphere.rs  texture.rs  util.rs  vec3.rs
