[package]
name = "ray-tracing-weekend"
version = "0.1.0"
authors = ["Zach Miller <zach@zjmil.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rayon = "1.5"
image = "0.23.12"

[profile.release]
debug = true
